kuber/nginx_pod.yml
cat <<EOF > nginx_pod.yml
  apiVersion: v1
  kind: Pod
  metadata:
    name: nginx
    annotations:
      ingress.kubernetes.io/rewrite-target: /
  spec:
    containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
          - containerPort: 80
        volumeMounts:
          - name: nginx-cm
            mountPath: "/etc/nginx/conf.d"
            readOnly: true
    volumes:
      - name: nginx-cm
        configMap:
          name: nginx-configmap
EOF
