kuber/forum_service.yml
apiVersion: v1
kind: Service
metadata:
  name: forum-service
spec:
  selector:
    app: forum
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
